--- a/gold-admin-frontend/src/app/views/pages/admin/sip-management/sip-application/sip-application.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/sip-management/sip-application/sip-application.component.html
@@ -5,57 +5,57 @@
 
                 <ng-container matColumnDef="sipapplicationdate">
                     <mat-header-cell *matHeaderCellDef>SIP application date</mat-header-cell>
-                    <mat-cell *matCellDef="let item">{{item.cycleDate}}</mat-cell>
+                    <mat-cell *matCellDef="let item">{{item.applicationDate}}</mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="customerId">
                     <mat-header-cell *matHeaderCellDef>Customer ID</mat-header-cell>
-                    <mat-cell *matCellDef="let item">{{item.cycleDateStatus}}</mat-cell>
+                    <mat-cell *matCellDef="let item">{{item.customerId}}</mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="sipApplicationnumber">
                     <mat-header-cell *matHeaderCellDef>SIP Application number</mat-header-cell>
-                    <mat-cell *matCellDef="let item">{{item.cycleDate}}</mat-cell>
+                    <mat-cell *matCellDef="let item">{{item.sipApplicationUniqueId}}</mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="metalType">
                     <mat-header-cell *matHeaderCellDef>Metal Type</mat-header-cell>
-                    <mat-cell *matCellDef="let item">{{item.cycleDateStatus}}</mat-cell>
+                    <mat-cell *matCellDef="let item">{{item.metalType}}</mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="sipInvestmentAmount">
                     <mat-header-cell *matHeaderCellDef>SIP Investment Amount</mat-header-cell>
-                    <mat-cell *matCellDef="let item">{{item.cycleDate}}</mat-cell>
+                    <mat-cell *matCellDef="let item">{{item.investmentAmount}}</mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="sipInvestmentTenure">
                     <mat-header-cell *matHeaderCellDef>SIP Investment Tenure</mat-header-cell>
-                    <mat-cell *matCellDef="let item">{{item.cycleDateStatus}}</mat-cell>
+                    <mat-cell *matCellDef="let item">{{item.sipInvestmentTenure}}</mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="sipStartDate">
                     <mat-header-cell *matHeaderCellDef>SIP Start Date</mat-header-cell>
-                    <mat-cell *matCellDef="let item">{{item.cycleDate}}</mat-cell>
+                    <mat-cell *matCellDef="let item">{{item.sipStartDate}}</mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="sipEndDate">
                     <mat-header-cell *matHeaderCellDef>SIP END Date</mat-header-cell>
-                    <mat-cell *matCellDef="let item">{{item.cycleDateStatus}}</mat-cell>
+                    <mat-cell *matCellDef="let item">{{item.sipEndDate}}</mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="status">
                     <mat-header-cell *matHeaderCellDef>Status</mat-header-cell>
-                    <mat-cell *matCellDef="let item">{{item.cycleDate}}</mat-cell>
+                    <mat-cell *matCellDef="let item">{{item.sipStatus}}</mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="depositType">
                     <mat-header-cell *matHeaderCellDef>Deposit Type</mat-header-cell>
-                    <mat-cell *matCellDef="let item">{{item.cycleDateStatus}}</mat-cell>
+                    <mat-cell *matCellDef="let item">{{item.depositType}}</mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="source">
                     <mat-header-cell *matHeaderCellDef>Source</mat-header-cell>
-                    <mat-cell *matCellDef="let item">{{item.cycleDate}}</mat-cell>
+                    <mat-cell *matCellDef="let item">{{item.source}}</mat-cell>
                 </ng-container>
 
                
