--- a/gold-admin-frontend/src/app/views/partials/components/global-settings/global-settings.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/global-settings/global-settings.component.html
@@ -1,6 +1,6 @@
 <div class="col-6 mx-auto parent-container">
     <form [formGroup]="globalSettingForm">
-        <div class="row kt-padding-t-40" *ngIf="loanSettingFlag || scrapSettingFlag">
+        <div class="row kt-padding-t-40" *ngIf="loanSetting || scrapSetting">
             <div class="col">
                 <div class="row">
                     <div class="col-6 form-label text-color d-flex align-items-center mandatory">LTV gold
@@ -17,7 +17,7 @@
             </div>
         </div>
 
-        <div class="row kt-padding-t-40" *ngIf="loanSettingFlag">
+        <div class="row kt-padding-t-40" *ngIf="loanSetting">
             <div class="col">
                 <div class="row">
                     <div class="col-6 form-label text-color d-flex align-items-center mandatory">Minimum
@@ -36,7 +36,7 @@
             </div>
         </div>
 
-        <div class="row kt-padding-t-40" *ngIf="loanSettingFlag">
+        <div class="row kt-padding-t-40" *ngIf="loanSetting">
             <div class="col">
                 <div class="row">
                     <div class="col-6 form-label text-color d-flex align-items-center mandatory">Minimum
@@ -52,7 +52,7 @@
             </div>
         </div>
 
-        <div class="row kt-padding-t-40" *ngIf="loanSettingFlag">
+        <div class="row kt-padding-t-40" *ngIf="loanSetting">
             <div class="col">
                 <div class="row">
                     <div class="col-6 form-label text-color d-flex align-items-center mandatory">Grace
@@ -70,7 +70,7 @@
             </div>
         </div>
 
-        <div class="row kt-padding-t-40" *ngIf="loanSettingFlag || scrapSettingFlag">
+        <div class="row kt-padding-t-40" *ngIf="loanSetting || scrapSetting">
             <div class="col">
                 <div class="row">
                     <div class="col-6 form-label text-color d-flex align-items-center mandatory">Cash
@@ -88,7 +88,7 @@
             </div>
         </div>
 
-        <div class="row kt-padding-t-40" *ngIf="scrapSettingFlag">
+        <div class="row kt-padding-t-40" *ngIf="scrapSetting">
             <div class="col">
                 <div class="row">
                     <div class="col-6 form-label text-color d-flex align-items-center mandatory">Processing
@@ -105,7 +105,7 @@
             </div>
         </div>
 
-        <div class="row kt-padding-t-40" *ngIf="scrapSettingFlag">
+        <div class="row kt-padding-t-40" *ngIf="scrapSetting">
             <div class="col">
                 <div class="row">
                     <div class="col-6 form-label text-color d-flex align-items-center mandatory">Processing Charges (%)
@@ -122,7 +122,7 @@
             </div>
         </div>
 
-        <div class="row kt-padding-t-40" *ngIf="loanSettingFlag || scrapSettingFlag">
+        <div class="row kt-padding-t-40" *ngIf="loanSetting || scrapSetting">
             <div class="col">
                 <div class="row">
                     <div class="col-6 form-label text-color d-flex align-items-center mandatory">GST (%)
@@ -137,7 +137,7 @@
             </div>
         </div>
 
-        <div class="row kt-padding-t-40" *ngIf="scrapSettingFlag">
+        <div class="row kt-padding-t-40" *ngIf="scrapSetting">
             <div class="col">
                 <div class="row">
                     <div class="col-6 form-label text-color d-flex align-items-center mandatory">Standard
@@ -158,7 +158,7 @@
             </div>
         </div>
 
-        <div class="row kt-padding-t-40" *ngIf="scrapSettingFlag">
+        <div class="row kt-padding-t-40" *ngIf="scrapSetting">
             <div class="col">
                 <div class="row">
                     <div class="col-6 form-label text-color d-flex align-items-center mandatory">Standard
@@ -178,7 +178,7 @@
             </div>
         </div>
 
-        <div class="row kt-padding-t-40" *ngIf="loanSettingFlag">
+        <div class="row kt-padding-t-40" *ngIf="loanSetting">
             <div class="col">
                 <div class="row">
                     <div class="col-6 form-label text-color d-flex align-items-center mandatory">Part Payment (%)
@@ -193,7 +193,7 @@
             </div>
         </div>
 
-        <div class="row kt-padding-t-40" *ngIf="digiGoldSettingFlag">
+        <div class="row kt-padding-t-40" *ngIf="digiGoldSetting">
             <div class="col">
                 <div class="row">
                     <div class="col-6 form-label text-color d-flex align-items-center mandatory">Digi Gold Sellable (hr)
