--- a/gold-admin-frontend/src/app/views/partials/components/global-settings/global-settings.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/global-settings/global-settings.component.html
@@ -129,7 +129,7 @@
                     </div>
                     <div class="col-6 per-gram align-items-center">
                         <input type="text" class="form-control" formControlName="gst" placeholder="8"
-                            [class.isError]="controls.gst.invalid && controls.gst.touched" >
+                            [class.isError]="controls.gst.invalid && controls.gst.touched">
                         <mat-error *ngIf="controls.gst.invalid && controls.gst.touched">
                             Field required</mat-error>
                     </div>
@@ -150,9 +150,10 @@
                         <mat-error
                             *ngIf="controls.standardDeductionMin.errors?.required && controls.standardDeductionMin.touched">
                             Field required</mat-error>
-                        <mat-error *ngIf="controls.standardDeductionMin.errors?.pattern && controls.standardDeductionMin.touched">
+                        <mat-error
+                            *ngIf="controls.standardDeductionMin.errors?.pattern && controls.standardDeductionMin.touched">
                             Invalid Number
-                 </mat-error>
+                        </mat-error>
                     </div>
                 </div>
             </div>
@@ -165,14 +166,16 @@
                         Deduction (max)
                     </div>
                     <div class="col-6 per-gram align-items-center">
-                        <input type="text" class="form-control" ktWeight formControlName="standardDeductionMax" placeholder="99"
+                        <input type="text" class="form-control" ktWeight formControlName="standardDeductionMax"
+                            placeholder="99"
                             [class.isError]="controls.standardDeductionMax.invalid && controls.standardDeductionMax.touched">
                         <mat-error
                             *ngIf="controls.standardDeductionMax.errors?.required && controls.standardDeductionMax.touched">
                             Field required</mat-error>
-                            <mat-error *ngIf="controls.standardDeductionMax.errors?.pattern && controls.standardDeductionMax.touched">
-                                Invalid Number
-                     </mat-error>
+                        <mat-error
+                            *ngIf="controls.standardDeductionMax.errors?.pattern && controls.standardDeductionMax.touched">
+                            Invalid Number
+                        </mat-error>
                     </div>
                 </div>
             </div>
@@ -199,9 +202,11 @@
                     <div class="col-6 form-label text-color d-flex align-items-center mandatory">Digi Gold Sellable (hr)
                     </div>
                     <div class="col-6 per-gram align-items-center">
-                        <input type="text" class="form-control" formControlName="digigoldsellable" placeholder="0"
-                            [class.isError]="controls.digigoldsellable.invalid && controls.digigoldsellable.touched">
-                        <mat-error *ngIf="controls.digigoldsellable.invalid && controls.digigoldsellable.touched">
+                        <input type="text" class="form-control" formControlName="digiGoldSellableHour" placeholder="0"
+                            [class.isError]="controls.digiGoldSellableHour.invalid && controls.digiGoldSellableHour.touched"
+                            numbersOnly>
+                        <mat-error
+                            *ngIf="controls.digiGoldSellableHour.invalid && controls.digiGoldSellableHour.touched">
                             Field required</mat-error>
                     </div>
                 </div>
